Fix the header on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 }
 body {
     font-family: 'Poppins', sans-serif;
-    font-size: 15px;
+    font-size: 14px;
     background: hsl(0, 0%, 98%);
     padding: 1em;
     display: flex;
@@ -16,17 +16,22 @@ body {
 header {
     text-align: center;
     margin: auto;
-    width: 100%;
+    padding: 0 1rem;
+    font-size: 15px;
 }
 p,
 .faint {
     color: hsl(229, 6%, 66%);
     font-weight: 200;
 }
-h1, 
-h2 {
+h1 {
     color: hsl(234, 12%, 34%);
     font-weight: 600;
+    font-size: 1.5rem;
+}
+h2 {
+    color: hsl(234, 12%, 34%);
+    font-weight: 400;
 }
 main{
     flex: 1;
@@ -34,7 +39,7 @@ main{
 .card {
     background: white;
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-    padding: 1em;
+    padding: 2em;
     margin: 2em 1em;
 }
 .card img {
